Skip to content

[3.0.x] redefines unrechable

From a recent build in Debian:

In file included from libvlc.c:39:
../include/vlc_common.h:115:10: warning: ‘unreachable’ redefined
  115 | # define unreachable() __builtin_unreachable()
      |          ^~~~~~~~~~~
In file included from ../include/vlc_fixups.h:97,
                 from ../config.h:1001,
                 from libvlc.c:36:
/usr/lib/gcc/x86_64-linux-gnu/15/include/stddef.h:468:9: note: this is the location of the previous definition
  468 | #define unreachable() (__builtin_unreachable ())
      |         ^~~~~~~~~~~
In file included from missing.c:38:
../include/vlc_common.h:115:10: warning: ‘unreachable’ redefined
  115 | # define unreachable() __builtin_unreachable()
      |          ^~~~~~~~~~~
In file included from ../include/vlc_fixups.h:97,
                 from ../config.h:1001,
                 from missing.c:35:
/usr/lib/gcc/x86_64-linux-gnu/15/include/stddef.h:468:9: note: this is the location of the previous definition
  468 | #define unreachable() (__builtin_unreachable ())
      |         ^~~~~~~~~~~
In file included from version.c:31:
../include/vlc_common.h:115:10: warning: ‘unreachable’ redefined
  115 | # define unreachable() __builtin_unreachable()
      |          ^~~~~~~~~~~
In file included from ../include/vlc_fixups.h:97,
                 from ../config.h:1001,
                 from version.c:28:
/usr/lib/gcc/x86_64-linux-gnu/15/include/stddef.h:468:9: note: this is the location of the previous definition
  468 | #define unreachable() (__builtin_unreachable ())
      |         ^~~~~~~~~~~
In file included from libvlc-module.c:36:
../include/vlc_common.h:115:10: warning: ‘unreachable’ redefined
  115 | # define unreachable() __builtin_unreachable()
      |          ^~~~~~~~~~~
In file included from ../include/vlc_fixups.h:97,
                 from ../config.h:1001,
                 from libvlc-module.c:31:
/usr/lib/gcc/x86_64-linux-gnu/15/include/stddef.h:468:9: note: this is the location of the previous definition
  468 | #define unreachable() (__builtin_unreachable ())
      |         ^~~~~~~~~~~

unrechable is now provided by GCC as of version 15.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information