vlc_common: don't redefine `unreachable` when using C23

Fixes #29390

(cherry picked from commit d56f1e196b570a2e2893c31a0d593bab2b31b349)
Signed-off-by: Thomas Guillem <thomas@gllm.fr>