include/vlc_common.h
@@ -112,7 +112,9 @@
 #ifdef __GNUC__
 # define likely(p)     __builtin_expect(!!(p), 1)
 # define unlikely(p)   __builtin_expect(!!(p), 0)
-# define unreachable() __builtin_unreachable()
+# if !defined(unreachable)
+#  define unreachable() __builtin_unreachable()
+# endif
 #else
 # define likely(p)     (!!(p))
 # define unlikely(p)   (!!(p))
